Bootstrapped a SAAS user and autogenerate key-pairs on server lifting, then verify a created user with the DiffieHellman algorithm

--- a/package.json
+++ b/package.json
@@ -6,13 +6,29 @@
   "keywords": [],
   "dependencies": {
     "assert": "^1.4.1",
+    "barrels": "^1.6.4",
+    "bcrypt": "^1.0.2",
+    "bluebird": "^3.4.7",
     "chai": "^3.5.0",
     "crypto": "0.0.3",
     "include-all": "^1.0.0",
+    "jsonwebtoken": "^7.2.1",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "paystack": "^1.4.1",
     "rc": "1.0.1",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sails": "~0.12.11",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-memory": "^0.10.7",
+    "sails-mongo": "^0.12.2",
+    "sails-validation-messages": "0.0.0",
+    "should": "^11.1.2",
+    "sparkpost": "^2.1.0",
+    "supertest": "^2.0.1"
   },
   "scripts": {
     "debug": "node debug app.js",
